--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nepalify-react",
   "version": "1.0.1",
   "description": "<h1> # nepalify-react </h1> <h2> Key mapping to Preeti font and Unicode </h2>",
-  "main": "nepali.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch",
