--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
   },
   "dependencies": {
     "react": "^15.5.4",
-    "webpack": "^2.6.1"
+    "webpack": "^4.0.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dipesh429/Nepalify.git"
   },
+  "types": "build/index.d.ts",
   "devDependencies": {
+    "@types/react": "^16.9.34",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.5.1"
+    "babel-preset-env": "^1.5.1",
+    "ts-loader": "^7.0.0",
+    "typescript": "^3.8.3",
+    "webpack-cli": "^3.3.11"
   },
   "keywords": [
     "unicode-nepali",
