add padding to formating in nepalidate

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
         "sourceMap": true,
         "jsx": "react",
         "declaration": true,
+        "lib": [
+            "es2017",
+            "DOM"
+        ]
     },
     "include": [
         "src/**/*"
