--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.5.1",
     "ts-loader": "^7.0.0",
+    "typedoc": "^0.17.4",
     "typescript": "^3.8.3",
     "webpack-cli": "^3.3.11"
   },
