--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Component : Key mapping to Preeti font and Unicode",
   "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register tests/**/*.test.ts",
     "start": "webpack --watch",
     "build": "webpack"
   },
@@ -18,6 +18,9 @@
   },
   "types": "build/index.d.ts",
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
@@ -25,7 +28,10 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.5.1",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
     "ts-loader": "^7.0.0",
+    "ts-node": "^8.9.0",
     "typedoc": "^0.17.4",
     "typescript": "^3.8.3",
     "webpack-cli": "^3.3.11"
